# Les_24_DRF

./: .env.sample  README.md  pyproject.toml
app_users/: urls.py
app_users/migrations/: 0001_initial.py
app_vehicle/: apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
app_vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car.py  0005_alter_milage_car_alter_milage_moto.py  0006_car_owner_moto_owner.py  0007_car_amount.py  0008_alter_milage_car.py  0009_car_price_moto_price.py
config/: celery.py  settings.py  urls.py
